solve overflow issues

--- a/style.css
+++ b/style.css
@@ -2,19 +2,28 @@
 * {
     margin: 0;
     padding: 0;
+    /* outline: 1px solid red; */
     box-sizing: border-box;
 }
 .color_orange{
   color: #E95A08;
 }
+/* html, body {
+  overflow-x: hidden !important;
+} */
 body {
     font-family: "Inter", sans-serif;
     background-color: #f9fbfd;
     color: #333;
+    max-width: 100vw;
+    /* overflow-x: hidden; */
     width: 100%;
     height: 100%;
 }
-
+/* .newsletter, .footer, .hero {
+  max-width: 100%;
+  overflow-x: hidden;
+} */
 /* Main Container */
 .section {
     max-width: 1200px;
@@ -126,7 +135,7 @@ main{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  max-width: 1140px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -183,7 +192,7 @@ main{
   align-items: flex-start;
   justify-content: center;
   gap: 30px;
-  max-width: 1140px;
+  max-width: 1200px;
   margin: 40px auto;
   position: relative;
 }
@@ -239,7 +248,7 @@ main{
 
 /* <!-- Latest deals are here-->--*/
 .latest-deals {
-  max-width: 1140px;
+  max-width: 1200px;
   margin: 50px auto;
   text-align: center;
   padding: 20px;
@@ -328,7 +337,9 @@ main{
 
 .flower-lover-image-box {
   position: relative;
-  width: 500px;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
 }
 
 .flower-lover-image {
@@ -383,7 +394,7 @@ main{
 
 /* Newsletter Section */
 .newsletter {
-  width: 100%;
+  width: 100%;  
   max-width: 100%;
   height: 500px;
   background: url('./images/news-letter-bg.png') no-repeat center center / cover;
@@ -446,7 +457,7 @@ main{
 }
 
 .footer-container {
-  max-width: 1140px;
+  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -498,6 +509,9 @@ main{
 
 /* Mobile Styles */
 @media  (max-width: 768px) {
+  body{
+    overflow-x: hidden;
+  }
   .container{
      margin:25px;
   }
